# SIHCLI-POTER-2026

./: .gitignore  99_🕵️_Detective.py  app.py  config.yaml  generar_parquet.py  home.py  migracion.py  packages.txt  pages98_🚑_Diagnostico.py  pyproject.toml  requirements.txt  setup_structure.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
data/: DatosPptnmes_ENSO.csv  Indices_Globales_1970_2024.csv  Indices_Globales_V2.csv
data/iri/: README.txt  enso_cpc_prob.json  enso_plumes.json  ensofcst_ALL.txt
data/shapefiles/: Bocatomas_Ant.sbn  Bocatomas_Ant.sbx  Bocatomas_Ant.shp  Bocatomas_Ant.shx  Zonas_PotHidrogeologico.dbf  Zonas_PotHidrogeologico.prj  Zonas_PotHidrogeologico.sbn  Zonas_PotHidrogeologico.sbx  Zonas_PotHidrogeologico.shp  Zonas_PotHidrogeologico.shx
modules/: admin_utils.py  analysis.py  bio_utils.py  config.py  data_processor.py  db_manager.py  gbif_connector.py  github_loader.py  hydrogeo_utils.py  interpolation.py  iri_api.py  land_cover.py  life_zones.py  reporter.py  selectors.py  sidebar.py  utils.py  visualizer.py
pages/: 01_🌦️_Clima_e_Hidrologia.py  02_💧_Aguas_Subterraneas.py  03_🍃_Biodiversidad.py  04_📊_Toma_de_Decisiones.py  05_🗺️_Isoyetas_HD.py  09_👑_Panel_Administracion.py  97_📚_Ayuda_y_Docs.py  98_🚑_Diagnostico.py  99_🕵️_Detective.py
tests/: test_basic.py  test_import.py
